--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.13"
 fastapi = "^0.116.1"
 bcrypt = "^4.3.0"
+python-jose = "^3.5.0"
+passlib = "^1.7.4"
 
 
 [build-system]
