changes errors for build
Changes on front for deploy

--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 description = ""
 authors = ["SebaVCH <sebastianvchepillo@gmail.com>"]
 readme = "README.md"
+packages = [
+    { include = "internal" },
+    { include = "cmd" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.13"
