--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -22,3 +22,8 @@ ollama = "^0.5.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=8.4.2,<9.0.0)"
+]
