--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Build Docker images
-        run: docker-compose build
+        run: docker compose build
 
       - name: Test Docker containers
-        run: docker-compose up -d && sleep 10 && docker-compose down
+        run: docker compose up -d && sleep 10 && docker compose down
