--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "emoji-picker-react": "^4.13.3",
     "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
